spacing fix, style fix

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -248,7 +248,8 @@ p
   img
     max-width: 94px
 // .user-card-bottom
-
+.paddingBottomRoot
+  padding-bottom: 120px
 .user-card-username
   display: flex
   flex-direction: column
